# cine-boletos-cli

./: LICENSE  README.md  pyproject.toml
docs/pseudocode/: Prueba_sistema_boletos_cine.psc
src/cine_boletos_cli/: main.py
src/cine_boletos_cli/application/dto/: booking_dto.py  movie_dto.py  showtime_dto.py
src/cine_boletos_cli/application/services/: booking_service.py  movie_service.py  payment_service.py  seat_service.py  showtime_service.py
src/cine_boletos_cli/application/use_cases/: cancel_booking.py  create_showtime.py  purchase_tickets.py
src/cine_boletos_cli/cli/: command_router.py
src/cine_boletos_cli/cli/commands/: admin_commands.py  booking_commands.py  movie_commands.py  showtime_commands.py
src/cine_boletos_cli/domain/entities/: booking.py  movie.py  room.py  seat.py  showtime.py
src/cine_boletos_cli/domain/exceptions/: domain_errors.py
src/cine_boletos_cli/domain/value_objects/: money.py  seat_id.py
src/cine_boletos_cli/infrastructure/idempotency/: idempotency_service.py
src/cine_boletos_cli/infrastructure/locking/: seat_lock_manager.py
src/cine_boletos_cli/infrastructure/persistence/: unit_of_work.py
src/cine_boletos_cli/infrastructure/persistence/repositories/: booking_repository.py  movie_repository.py  seat_repository.py  showtime_repository.py
src/cine_boletos_cli/shared/: constants.py
src/cine_boletos_cli/workers/: compensation_worker.py  lock_expiry_worker.py  notification_worker.py
