[project]
name = "cine-boletos-cli"
version = "0.1.0"
description = "Sistema de venta de boletos de cine por CLI"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
authors = [
    { name = "Daniel Enrique Menendez Gomez - MG13020" },
    { name = "Joel Isaias Garcia Torres - GT14001" },
    { name = "Paola Elizabeth Ascencio Barrientos - AA25001" }
]
dependencies = []

[project.scripts]
cine = "cine_boletos_cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.0"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
